[package]
name = "cpudetect"
version = "0.1.0"
edition = "2021"

[lib]
name = "cpudetect"
path = "src/lib.rs"
crate-type = ["rlib", "dylib", "staticlib"]

[[bin]]
name = "lscpu"
path = "bin/lscpu.rs"

[dependencies]
bitflags = "2.4"
colored = "2.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
