[package]
name = "cpudetect"
version = "0.0.1"
edition = "2024"

[lib]
name = "cpudetect"
path = "src/lib.rs"
crate-type = ["rlib", "dylib", "staticlib"]

[[bin]]
name = "lscpu"
path = "bin/lscpu.rs"

[dependencies]
bitflags = "2.10.0"
colored = "3.0.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
